--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -1,5 +1,7 @@
 .login-pf body {
-
+    //to remove patternfly background css
+    background: none;
+    //normal css
     background-image: url(https://toolassets.haptikapi.com/haptik-offerings/bg.png);
     background-size: cover;
     background-color: #fff;
