--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -9,7 +9,12 @@
 }
 
 .header-image {
-  margin-top: 20px;
+  margin-top: 36px;
+  max-height: 80px;
+}
+
+.header-image img {
+  max-height: inherit;
 }
 
 .welcome-heading {
@@ -77,6 +82,12 @@ error {
 a#kc-current-locale-link {
   display: block;
   padding: 0 5px;
+}
+
+#kc-page-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 12px;
 }
 
 /* a#kc-current-locale-link:hover {
@@ -406,8 +417,19 @@ a.zocial {
 }
 
 #kc-form-buttons {
-  margin-top: 40px;
+  margin-top: 22px;
   margin-bottom: 24px;
+}
+
+#kc-form-buttons > input {
+  background: #0067dd;
+  border-radius: 4px;
+  border: none;
+  box-shadow: none;
+  padding: 11px 10px;
+  max-height: 42px;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .login-pf-page .login-pf-brand {
@@ -473,7 +495,18 @@ a.zocial {
   margin-bottom: 25px;
 }
 .login-pf-page .login-pf-social-link a {
-  padding: 2px 0;
+  background: #0067dd;
+  border-radius: 4px;
+  border: none;
+  box-shadow: none;
+  padding: 6px 8px;
+  max-height: 42px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+}
+.login-pf-page .login-pf-social-link a > span {
+  margin-left: -30px;
 }
 
 .login-pf-page.login-pf-page-accounts {
