fix(css): incorrect css classname passed

--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -537,7 +537,7 @@ a.zocial {
   color: #fff;
 }
 
-.login-pf-socidal-link a:hover {
+.login-pf-social-link > a:hover {
   background: #025bc1 !important;
 }
 
