--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -1,6 +1,6 @@
 .login-pf body {
   background: none;
-  background-image: url(https://toolassets.haptikapi.com/haptik-offerings/bg.png);
+  background: #f2f2f2;
   background-size: cover;
   background-color: #fff;
   min-height: 418px;
